[metadata]
name = rpi-rf-queued-sender
homepage = https://github.com/Prototyped/rpi-rf-queued-sender
long_description = file: README.md

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
packages = find:
scripts = rpi-rf-queued-sender.py
setup_requires =
    setuptools~=60.7.0

